# hce

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
bindings/elixir/: README.md  mix.exs
bindings/elixir/lib/: hce.ex
bindings/elixir/test/: hce_test.exs
bindings/go/: README.md  go.mod  hce.go  hce_test.go
bindings/java/: README.md  build.gradle  pom.xml
bindings/java/src/main/java/com/github/humancognition/hce/: HceCodec.java
bindings/java/src/test/java/com/github/humancognition/hce/: HceCodecTest.java
bindings/npm/hce/: LICENSE  README.md  hce.test.js  package-lock.json  package.json
bindings/sql/: README.md  hce.sql  hce_udf.c
bindings/swift/: Package.swift  README.md
bindings/swift/Sources/Hce/: HceCodec.swift
bindings/swift/Tests/HceTests/: HceTests.swift
crates/hce-adapters/: Cargo.toml
crates/hce-adapters/src/: lib.rs  objectid.rs  snowflake.rs  ulid.rs  uuid.rs  xid.rs
crates/hce-cli/: Cargo.toml
crates/hce-cli/src/: main.rs
crates/hce-cli/tests/: integration.rs
crates/hce-core/: Cargo.toml  README.md  build.rs
crates/hce-core/packs/: eu.json  numeric.json  universal.json
crates/hce-core/src/: check.rs  confusion.rs  constants.rs  crc.rs  encode.rs  lib.rs  normalize.rs  parser.rs  pools.rs  recover.rs  render.rs  timestamp.rs  token.rs  version.rs  wire.rs
crates/hce-core/src/chunk/: engine.rs  mod.rs  strategy.rs
crates/hce-core/src/fpe/: feistel.rs  mod.rs  shuffle.rs
crates/hce-core/src/kat/: main.rs
crates/hce-core/tests/: exhaustive.rs  kat.rs
crates/hce-ffi/: Cargo.toml  README.md  cbindgen.toml  hce.h
crates/hce-ffi/src/: lib.rs
crates/hce-ffi/tests/: exhaustive.rs
crates/hce-fpe/: Cargo.toml
crates/hce-fpe/src/: lib.rs
crates/hce-py/: Cargo.toml  README.md  pyproject.toml
crates/hce-py/src/: lib.rs
crates/hce-py/tests/: conftest.py  test_api.py  test_kat.py  test_pytest.py
crates/hce-wasm/: Cargo.toml  build.rs
crates/hce-wasm/src/: lib.rs
shared/: pools_verified.json
shared/packs/: en.json
