[package]
name = "hce-adapters"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/humancognition/hce"
keywords = ["hce", "identifier", "codec"]
categories = ["cryptography", "encoding"]
description = "Lossless, pronounceable, encrypted codec for any identifier — reversible, format-preserving, human-readable"

[dependencies]
hce-core = { path = "../hce-core" }
rand = { version = "0.10.1", default-features = false, features = ["std", "std_rng"] }

[dev-dependencies]
rand = { version = "0.10.1", default-features = false, features = ["std", "std_rng"] }
