[package]
name = "hce-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/humancognition/hce"
keywords = ["hce", "identifier", "codec"]
categories = ["cryptography", "encoding"]
description = "Lossless, pronounceable, encrypted codec for any identifier — reversible, format-preserving, human-readable"

[[bin]]
name = "hce"
path = "src/main.rs"

[dependencies]
hce-core = { path = "../hce-core" }
hce-fpe = { path = "../hce-fpe" }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
