[package]
name = "hce-fpe"
version = "0.1.0"
edition = "2021"
description = "Lossless, pronounceable, encrypted codec for any identifier — reversible, format-preserving, human-readable"
license = "MIT"
repository = "https://github.com/humancognition/hce"
keywords = ["hce", "fpe", "ff3", "format-preserving-encryption"]
categories = ["cryptography"]

[dependencies]
hce-core = { path = "../hce-core", default-features = false }

[features]
default = ["std"]
std = []
