[package]
name = "hce-py"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/humancognition/hce"
description = "Lossless, pronounceable, encrypted codec for any identifier — reversible, format-preserving, human-readable"

[lib]
name = "hce"
crate-type = ["cdylib"]

[dependencies]
hce-core = { path = "../hce-core" }
hce-fpe = { path = "../hce-fpe" }
pyo3 = { version = "0.29.0", features = ["extension-module"] }
