[package]
name = "hce-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/humancognition/hce"
keywords = ["hce", "identifier", "codec"]
categories = ["cryptography", "encoding"]
description = "Lossless, pronounceable, encrypted codec for any identifier — reversible, format-preserving, human-readable"

[lib]
crate-type = ["cdylib"]

[dependencies]
hce-core = { path = "../hce-core", default-features = false }
hce-fpe = { path = "../hce-fpe", default-features = false }
wasm-bindgen = "=0.2.125"
wee_alloc = "0.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
